--- a/panel/assets/index.css
+++ b/panel/assets/index.css
@@ -5,7 +5,7 @@ dt, dd, blockquote, address { margin: 0; padding: 0 }
 
 html { font-size: 16px }
 
-body, input, textarea {
+body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   line-height: 1.5;
   font-size: 1rem;
@@ -87,15 +87,18 @@ ul li {
 .tcwhite { color: #fff }
 
 input, textarea {
-  border: 1px solid #000;
   padding: 0.5rem;
-  outline: 0;
-  border-radius: 3px;
 }
 
 .input {
   border: 1px solid #000;
   border-radius: 3px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  line-height: 1.5;
+  font-size: 1rem;
+  font-weight: 200;
+  outline: 0;
+  width: 100%;
 }
 
 [tabindex] { outline: 0 }
