--- a/panel/assets/index.css
+++ b/panel/assets/index.css
@@ -59,6 +59,7 @@ ul li {
 .r0 { right: 0 }
 .b0 { bottom: 0 }
 .z2 { z-index: 2 }
+.z3 { z-index: 3 }
 
 .p1 { padding: 0.75rem }
 .p2 { padding: 1.5rem }
