--- a/panel/assets/index.css
+++ b/panel/assets/index.css
@@ -9,14 +9,13 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   line-height: 1.5;
   font-size: 1rem;
-  font-weight: 200;
+  font-weight: 400;
 }
 
 a {
   color: #000;
   text-decoration: none;
 }
-
 
 ul li { margin-left: 1.2rem }
 .lsn { list-style: none }
@@ -26,11 +25,11 @@ ul li { margin-left: 1.2rem }
 .copy > *:first-child { margin-top: 0 }
 .copy > *:last-child { margin-bottom: 0 }
 
-.editor-preview > * { margin-top: 1.5rem; margin-bottom: 1.5rem; }
-.editor-preview > *:first-child { margin-top: 0 }
-.editor-preview > *:last-child { margin-bottom: 0 }
+.editor-preview-side > *, .editor-preview > * { margin-top: 1.5rem; margin-bottom: 1.5rem; }
+.editor-preview-side > *:first-child, .editor-preview > *:first-child { margin-top: 0 }
+.editor-preview-side > *:last-child, .editor-preview > *:last-child { margin-bottom: 0 }
 
-.fwb { font-weight: bold }
+.fwb { font-weight: 700 }
 
 .x { display: flex }
 .xw { flex-wrap: wrap }
@@ -100,7 +99,7 @@ input, textarea {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   line-height: 1.5;
   font-size: 1rem;
-  font-weight: 200;
+  font-weight: 400;
   outline: 0;
   width: 100%;
 }
@@ -522,13 +521,13 @@ div.CodeMirror-dragcursors {
     visibility: visible
 }
 .CodeMirror-selected {
-    background: #d9d9d9
+    background: #ddd
 }
 .CodeMirror-focused .CodeMirror-selected,
 .CodeMirror-line::selection,
 .CodeMirror-line>span::selection,
 .CodeMirror-line>span>span::selection {
-    background: #d7d4f0
+    background: #ddd
 }
 .CodeMirror-crosshair {
     cursor: crosshair
@@ -683,7 +682,7 @@ span.CodeMirror-selectedtext {
 .editor-toolbar i.separator {
     display: inline-block;
     width: 0;
-    border-left: 1px solid #000;
+    border-left: 1px solid #ddd;
     border-right: 1px solid #fff;
     color: transparent;
     text-indent: -10px;
