--- a/panel/assets/index.css
+++ b/panel/assets/index.css
@@ -78,6 +78,7 @@ ul li { margin-left: 1.2rem }
 .m0 { margin: 0 }
 .mb1 { margin-bottom: 0.75rem }
 .mt2 { margin-top: 1.5rem }
+.mb2 { margin-bottom: 1.5rem }
 .my4 { margin: 3rem 0 }
 .mt4 { margin-top: 3rem }
 .mt8 { margin-top: 6rem }
