--- a/panel/assets/custom.css
+++ b/panel/assets/custom.css
@@ -240,8 +240,8 @@ textarea {
 }
 
 .file-preview {
-  height: 100vh;
-  margin: 0 -0.75rem 0 0.75rem;
+  max-height: 100vh;
+  margin: -0.75rem -0.75rem -0.75rem 0.75rem;
   background-image: url('data:image/svg+xml;utf8,<svg height="10" width="10" viewBox="0 0 10 10" xmlns="http://www.w3.org/2000/svg"><rect height="5" width="5" x="0" y="0" fill="rgba(127, 127, 127, 0.15)" /><rect height="5" width="5" x="5" y="5" fill="rgba(127, 127, 127, 0.15)" /></svg>');
 }
 
