--- a/source/design/simplemde.css
+++ b/source/design/simplemde.css
@@ -370,7 +370,7 @@ span.CodeMirror-selectedtext {
 .CodeMirror {
   height: auto;
   min-height: 10rem;
-  padding: 1rem;
+  padding: 1rem 1.5rem;
   font: inherit;
   z-index: 1
 }
