--- a/source/design/guides.css
+++ b/source/design/guides.css
@@ -2,9 +2,9 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
   grid-auto-rows: auto;
-  grid-column-gap: 1rem;
-  grid-row-gap: 1rem;
-  padding: 1rem;
+  grid-column-gap: 2px;
+  grid-row-gap: 2px;
+  padding: 2px;
 }
 
 .grid-column {
@@ -12,19 +12,7 @@
   width: 100%;
 }
 
-/*
-.grid-featured {
-  grid-column-end: span 2;
-}
-
-.grid-featured h2 {
-  font-size: 3.6rem;
-}
-
-.grid-featured .copy {
-  font-size: 1.8rem;
-}
-*/
+.guides-grid h2 { font-size: 2.5rem }
 
 .guides-grid .copy {
   font-size: 1.4rem;
@@ -32,24 +20,34 @@
   max-width: 40rem;
 }
 
-/*
-.grid-featured .copy {
-  height: 10.5rem;
-  max-width: 50rem;
+.guides-grid .guide-border {
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: opacity 150ms ease-out;
+  border: 2px solid var(--active);
+  z-index: 3;
 }
-*/
 
-.guides-grid a {
+.guides-grid a:hover .guide-border {
+  opacity: 1;
+}
+
+.guides-grid a .guide-meta {
   transition: 250ms ease-out transform;
   overflow: hidden;
   margin-bottom: -1rem;
 }
 
-.guides-grid a:hover {
+.guides-grid a:hover .guide-meta {
   transform: translateY(-0.3rem);
 }
 
-.guides-grid a:active {
+.guides-grid a:active .guide-meta {
   transform: translateY(0rem);
   transition: 50ms ease-out transform;
 }
